<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:id="@+id/scrollView"
    android:background="@color/color_lecturas_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

       <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="true">

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="true">

        <com.github.mikephil.charting.charts.LineChart
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:id="@+id/chart">

        </com.github.mikephil.charting.charts.LineChart>

    </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_dia"
            android:id="@+id/btn_dia" />
        <Button
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_semana"
            android:id="@+id/btn_semana" />

        <Button
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_mes"
            android:id="@+id/btn_mes" />
    </LinearLayout>
    </LinearLayout>
</ScrollView>