<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.itsco.proyectotesis.VariableFragment"
    android:weightSum="1">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/lb_ultima"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textSize="16sp" />

    <TextView
        android:text="45 ºC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lb_ultima"
        android:textSize="72sp"
        android:textAlignment="center" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/lb_maxima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/lb_minima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textStyle="normal|bold" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/lb_maxima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lb_maxima"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:text="49 ºC" />

        <TextView
            android:text="@string/lb_minima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lb_minima"
            android:layout_weight="1"
            android:textAlignment="center"
            tools:text="34 ºC"
            android:textSize="18sp" />
    </LinearLayout>
    <view
        android:layout_width="match_parent"
        class="com.github.mikephil.charting.charts.LineChart"
        android:id="@+id/chart_hora"
        android:layout_height="100dp"
        android:layout_weight="0.17" />

</LinearLayout>
